--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-__pycache__/
-/output.sas
-/sas_plan
-/sas_plan.*
+**/*.tmp
+.idea/
+/**/cmake-build-debug
 /builds/
 /experiments/issue*/.venv/
 /experiments/issue*/data/
 /misc/.tox/
 /misc/autodoc/downward-xmlrpc.secret
+/output.sas
+/sas_plan
+/sas_plan.*
+__pycache__/
